--- a/landing/package.json
+++ b/landing/package.json
@@ -4,6 +4,7 @@
   "description": "AllyTrips Landing Page - High Performance React App",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -32,8 +33,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0"
   }
 }
